# yurenizer_backend

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: initializer.py  logging.conf  logging_debug.conf  logging_lambda.conf  main.py
app/api/: api.py  deps.py
app/api/endpoints/: healthcheck.py  normalize.py  normalize_csv.py  normalize_text.py
app/controllers/: get_normalize_controller.py  get_normalize_csv_controller.py  get_normalize_text_controller.py
app/core/: config.py
app/interfaces/repositories/: normalize_csv_repositry.py  normalize_repositry.py  normalize_text_repositry.py
app/interfaces/usecases/: normalize_csv_usecase.py  normalize_text_usecase.py
app/repositories/: yurenizer_repositry.py
app/schemes/: normalize.py
app/usecases/: normalize_csv_usecase.py  normalize_text_usecase.py
app/utils/: crud_file.py
